src/query/QueryLanguageParser.java
package query;

// $ANTLR 3.4 C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g 2017-03-29 00:45:24

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class QueryLanguageParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "AS", "AST_CHILD", "ATTRIBUTE", "ATTRIBUTES", "BIN_OP", "BLOCK_STATEMENTS", "BOOL_EXP", "CALLQUERY", "CHAIN_ID", "COLON", "COMMA", "COMPOUND_ADD", "COMP_ADD", "CONTAINS", "COUNT", "DEPTH", "DIRECTLY", "DIVIDE", "DQOUTE", "ELSE", "ELSE_BLOCK", "EPSILON", "EQUALS", "ESC_SEQ", "EXPONENT", "FILTER", "FILTER_QUERY", "FLOAT", "FOR_QUERY", "FUNCTION", "GT", "GTE", "HAS", "HEX_DIGIT", "ID", "IF", "IF_STATEMENT", "IN", "INCR", "INCREMENT", "INMOST", "INTEGER", "IN_CLAUSE", "IS", "ISNODETYPE", "ISPARENT", "LEFT_BRACKET", "LEFT_PAREN", "LEFT_SQ_BRACKET", "LIMITATION", "LIMITATION_CLAUSE", "LINENUMBER", "LINE_COMMENT", "LOGIC_EQUALS", "LOGIC_OP", "LT", "LTE", "MAX", "METHODBINDING", "MIN", "MINUS", "NESTED", "NODE", "NODETYPE", "NODE_CHAIN", "NODE_CHAIN_OP", "NODE_NAME", "NODE_TYPE", "NOT", "NOT_EQUAL", "OCTAL_ESC", "OR", "OUTMOST", "PERIOD", "PLUS", "PRINT", "PROPERTY", "QUERIES", "QUERY", "QUERY_NAME", "REPEATER", "RESERVED_TYPES", "RIGHT_BRACKET", "RIGHT_PAREN", "RIGHT_SQ_BRACKET", "SELECT", "SELECT_QUERY", "SEMICOLON", "SET", "SET_TABLE", "SPACE", "STAR", "STATEMENT", "STATEMENTS", "STRING", "TABLE", "UNICODE_ESC", "VAR", "VAR_ASSIGN", "VAR_NAME", "VAR_STMT", "WHERE", "WHERE_BLOCK", "WHILE", "WHILE_STATEMENT", "WITH", "WITH_CLAUSE"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int AS=5;
    public static final int AST_CHILD=6;
    public static final int ATTRIBUTE=7;
    public static final int ATTRIBUTES=8;
    public static final int BIN_OP=9;
    public static final int BLOCK_STATEMENTS=10;
    public static final int BOOL_EXP=11;
    public static final int CALLQUERY=12;
    public static final int CHAIN_ID=13;
    public static final int COLON=14;
    public static final int COMMA=15;
    public static final int COMPOUND_ADD=16;
    public static final int COMP_ADD=17;
    public static final int CONTAINS=18;
    public static final int COUNT=19;
    public static final int DEPTH=20;
    public static final int DIRECTLY=21;
    public static final int DIVIDE=22;
    public static final int DQOUTE=23;
    public static final int ELSE=24;
    public static final int ELSE_BLOCK=25;
    public static final int EPSILON=26;
    public static final int EQUALS=27;
    public static final int ESC_SEQ=28;
    public static final int EXPONENT=29;
    public static final int FILTER=30;
    public static final int FILTER_QUERY=31;
    public static final int FLOAT=32;
    public static final int FOR_QUERY=33;
    public static final int FUNCTION=34;
    public static final int GT=35;
    public static final int GTE=36;
    public static final int HAS=37;
    public static final int HEX_DIGIT=38;
    public static final int ID=39;
    public static final int IF=40;
    public static final int IF_STATEMENT=41;
    public static final int IN=42;
    public static final int INCR=43;
    public static final int INCREMENT=44;
    public static final int INMOST=45;
    public static final int INTEGER=46;
    public static final int IN_CLAUSE=47;
    public static final int IS=48;
    public static final int ISNODETYPE=49;
    public static final int ISPARENT=50;
    public static final int LEFT_BRACKET=51;
    public static final int LEFT_PAREN=52;
    public static final int LEFT_SQ_BRACKET=53;
    public static final int LIMITATION=54;
    public static final int LIMITATION_CLAUSE=55;
    public static final int LINENUMBER=56;
    public static final int LINE_COMMENT=57;
    public static final int LOGIC_EQUALS=58;
    public static final int LOGIC_OP=59;
    public static final int LT=60;
    public static final int LTE=61;
    public static final int MAX=62;
    public static final int METHODBINDING=63;
    public static final int MIN=64;
    public static final int MINUS=65;
    public static final int NESTED=66;
    public static final int NODE=67;
    public static final int NODETYPE=68;
    public static final int NODE_CHAIN=69;
    public static final int NODE_CHAIN_OP=70;
    public static final int NODE_NAME=71;
    public static final int NODE_TYPE=72;
    public static final int NOT=73;
    public static final int NOT_EQUAL=74;
    public static final int OCTAL_ESC=75;
    public static final int OR=76;
    public static final int OUTMOST=77;
    public static final int PERIOD=78;
    public static final int PLUS=79;
    public static final int PRINT=80;
    public static final int PROPERTY=81;
    public static final int QUERIES=82;
    public static final int QUERY=83;
    public static final int QUERY_NAME=84;
    public static final int REPEATER=85;
    public static final int RESERVED_TYPES=86;
    public static final int RIGHT_BRACKET=87;
    public static final int RIGHT_PAREN=88;
    public static final int RIGHT_SQ_BRACKET=89;
    public static final int SELECT=90;
    public static final int SELECT_QUERY=91;
    public static final int SEMICOLON=92;
    public static final int SET=93;
    public static final int SET_TABLE=94;
    public static final int SPACE=95;
    public static final int STAR=96;
    public static final int STATEMENT=97;
    public static final int STATEMENTS=98;
    public static final int STRING=99;
    public static final int TABLE=100;
    public static final int UNICODE_ESC=101;
    public static final int VAR=102;
    public static final int VAR_ASSIGN=103;
    public static final int VAR_NAME=104;
    public static final int VAR_STMT=105;
    public static final int WHERE=106;
    public static final int WHERE_BLOCK=107;
    public static final int WHILE=108;
    public static final int WHILE_STATEMENT=109;
    public static final int WITH=110;
    public static final int WITH_CLAUSE=111;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public QueryLanguageParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public QueryLanguageParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return QueryLanguageParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g"; }


    public static class startrule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "startrule"
    // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:52:1: startrule : queries -> ^( QUERIES queries ) ;
    public final QueryLanguageParser.startrule_return startrule() throws RecognitionException {
        QueryLanguageParser.startrule_return retval = new QueryLanguageParser.startrule_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        QueryLanguageParser.queries_return queries1 =null;


        RewriteRuleSubtreeStream stream_queries=new RewriteRuleSubtreeStream(adaptor,"rule queries");
        try {
            // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:53:2: ( queries -> ^( QUERIES queries ) )
            // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:53:4: queries
            {
            pushFollow(FOLLOW_queries_in_startrule332);
            queries1=queries();

            state._fsp--;

            stream_queries.add(queries1.getTree());

            // AST REWRITE
            // elements: queries
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 53:12: -> ^( QUERIES queries )
            {
                // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:53:15: ^( QUERIES queries )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(QUERIES, "QUERIES")
                , root_1);

                adaptor.addChild(root_1, stream_queries.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "startrule"


    public static class queries_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "queries"
    // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:56:1: queries : ( blockquery )* ;
    public final QueryLanguageParser.queries_return queries() throws RecognitionException {
        QueryLanguageParser.queries_return retval = new QueryLanguageParser.queries_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        QueryLanguageParser.blockquery_return blockquery2 =null;



        try {
            // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:56:9: ( ( blockquery )* )
            // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:56:11: ( blockquery )*
            {
            root_0 = (Object)adaptor.nil();


            // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:56:11: ( blockquery )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==EPSILON||LA1_0==ID||LA1_0==LEFT_BRACKET||LA1_0==SELECT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:56:11: blockquery
            	    {
            	    pushFollow(FOLLOW_blockquery_in_queries350);
            	    blockquery2=blockquery();

            	    state._fsp--;

            	    adaptor.addChild(root_0, blockquery2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "queries"


    public static class blockquery_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "blockquery"
    // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:62:1: blockquery : query ;
    public final QueryLanguageParser.blockquery_return blockquery() throws RecognitionException {
        QueryLanguageParser.blockquery_return retval = new QueryLanguageParser.blockquery_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        QueryLanguageParser.query_return query3 =null;



        try {
            // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:63:2: ( query )
            // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:63:6: query
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_query_in_blockquery369);
            query3=query();

            state._fsp--;

            adaptor.addChild(root_0, query3.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "blockquery"


    public static class query_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "query"
    // C:\\Desktop\\gw\\program_comprehension\\code_archaeology\\git\\code-arch-13\\Windows\\Senior-Design\\src\\query\\QueryLanguage.g:66:1: query : ( query_name select_query print_stmt -> ^( QUERY ^( QUERY_NAME query_name ) ^( SELECT_QUERY select_query ) ^( PRINT ( print_stmt )? ) ) | query_name ID FILTER ID print_stmt -> ^( QUERY ^( QUERY_NAME query_name ) ^( FILTER_QUERY ID FILTER ID ) ^( PRINT ( print_stmt )? ) ) | stat_statements -> ^( STATEMENTS stat_statements ) | EPSILON );
    public final QueryLanguageParser.query_return query() throws RecognitionException {
        QueryLanguageParser.query_return retval = new QueryLanguageParser.query_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID8=null;
        Token FILTER9=null;
        Token ID10=null;
        Token EPSILON13=null;
        QueryLanguageParser.query_name_return query_name4 =null;

        QueryLanguageParser.select_query_return select_query5 =null;

        QueryLanguageParser.print_stmt_return print_stmt6 =null;

        QueryLanguageParser.query_name_return query_name7 =null;

        QueryLanguageParser.print_stmt_return print_stmt11 =null;

        QueryLanguageParser.stat_statements_return stat_statements12 =null;

